--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.3",
     "ts-node-dev": "^1.0.0-pre.61",
