--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
    "type": "postgres",
    "host": "localhost",
-   "port": 5433,
-   "username": "postgres",
-   "password": "docker",
-   "database": "node_database",
+   "port": 5432,
+   "username": "docker",
+   "password": "kafka",
+   "database": "docker",
    "entities": [
       "./src/modules/**/infra/typeorm/entities/*.ts"
    ],
