--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "kafkajs": "^1.15.0",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
